# image-classifier

./: .gitignore  README.md  dataset.py  pyproject.toml  train.py
runs/: events.out.tfevents.1719428808.AL-Station.11144.0  events.out.tfevents.1719433173.AL-Station.11144.1
runs/TesT/: events.out.tfevents.1719675884.AL-Station.8852.0  events.out.tfevents.1719864113.AL-Station.2840.0
runs/adam_0.0001_more_linear_fewer_conv/: events.out.tfevents.1719558106.AL-Station.17256.0
runs/adam_0.0001_vgg16/: events.out.tfevents.1719561590.AL-Station.18304.0
runs/adam_0.0001_vgg16_0.90_train_dataset/: events.out.tfevents.1719578032.AL-Station.9232.0
runs/adam_0.0001_vgg16_more_data/: events.out.tfevents.1719569279.AL-Station.17308.0
runs/adam_0.0005_modified_vgg16/: events.out.tfevents.1719491749.AL-Station.6696.0
runs/adam_0.001_fewer_conv_more_linear_with_dropouts/: events.out.tfevents.1719486818.AL-Station.15372.0
runs/adam_0.001_vgg16/: events.out.tfevents.1719567851.AL-Station.19220.0
runs/adam_0.5xVGG16_0.001/: events.out.tfevents.1719482408.AL-Station.17024.0
runs/adam_0.5xVGG16_0.005/: events.out.tfevents.1719481140.AL-Station.12244.0
runs/bs_48_modified_vgg16/: events.out.tfevents.1719663912.AL-Station.11828.0
runs/bs_48_vgg16_0.90_train_data/: events.out.tfevents.1719666288.AL-Station.25124.0
runs/cont_adam_0.0005_modified_vgg16/: events.out.tfevents.1719494968.AL-Station.18468.0
runs/cont_adam_0.0005_vgg16_more_layers_x0.5/: events.out.tfevents.1719497184.AL-Station.17200.0
src/: architecture.py  dataset.py  train.py
(+1 files in other folders)
