[project]
name = "image-classifier"
version = "1.0.0"
description = "Image classification project completed as a homework assignment for my programming course during the Summer Semester 2024"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy>=2.0.2",
    "pillow>=11.1.0",
    "torch>=2.6.0",
    "torchvision>=0.21.0",
    "tqdm>=4.67.1",
]
